Updates to code

--- a/main.ipynb
+++ b/main.ipynb
@@ -73,7 +73,7 @@
     "        auth.set_access_token(keys_dict[\"access_token_key\"], keys_dict[\"access_token_secret\"])\n",
     "        self.api = tw.API(auth, wait_on_rate_limit=True)\n",
     "        self.twitter_keys = keys_dict\n",
-    "        self.Path = Path(f'{os.getcwd()}, tweets')\n",
+    "        self.path = Path(f'{os.getcwd()}')\n",
     "\n",
     "    def mine_tweets(self, query=\"BTC\"):\n",
     "        \"\"\"\n",
