Continue coding and adding Real Market Bitcoin Price

--- a/process_sentiment.ipynb
+++ b/process_sentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import SnowballStemmer, WordNetLemmatizer\n",
     "from nltk.tokenize import RegexpTokenizer\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from textblob import TextBlob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
     "    \"BTC\",\n",
     "    #\"ETH\",\n",
     "    #\"USDT\",\n",
-    "    \"XRP\",\n",
+    "    # \"XRP\",\n",
     "    #\"BCH\",\n",
     "    #\"ADA\",\n",
     "    #\"BSV\",\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,7 @@
     "\n",
     "        self.df = []\n",
     "        self.vocabulary = []\n",
-    "        # self.sentiment = []\n",
+    "        self.final = []\n",
     "\n",
     "    # Read tweets from CSV for every currency\n",
     "    def read_tweets(self, curr):\n",
@@ -122,27 +123,30 @@
     "\n",
     "        print(f\"Number of words: {count}\")\n",
     "        print(f\"Number of unique words: {len(self.vocabulary)}\")\n",
-    "    \n",
-    "    def getSentiment(self, tweet):\n",
+    "\n",
+    "    def getSentiment(self, tweet) -> list:\n",
     "        \"\"\"\n",
     "        Get the sentiment of the tweet.\n",
     "        \"\"\"\n",
     "        analysis = TextBlob(tweet)\n",
+    "        # analyser = SentimentIntensityAnalyzer()\n",
+    "        # sent = analyser.polarity_scores(analysis)\n",
     "\n",
-    "        return analysis.sentiment.polarity"
+    "        return analysis.sentiment.polarity\n",
+    "        # return [sent['neg'], sent['neu'], sent['pos'], sent['compound']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of words: 769267\n",
-      "Number of unique words: 591040\n"
+      "Number of words: 388596\n",
+      "Number of unique words: 306797\n"
      ]
     }
    ],
@@ -162,99 +166,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# processed.df[0]['text'][:10]\n",
-    "# processed.df[0]['text_clean'][:10]"
+    "# processed.df[0]['text_clean'][:10]\n",
+    "\n",
+    "# tweet_id,name,screen_name,retweet_count,text,mined_at,created_at,favourite_count,\n",
+    "# hashtags,status_count,followers_count,location,source_device,retweet_text\n",
+    "for index in range(len(processed.df)):\n",
+    "    # Drop columns that are not needed\n",
+    "    processed.df[index].drop(columns=['tweet_id', 'name', 'screen_name', 'mined_at',                                      'retweet_count', 'favourite_count', 'hashtags', \n",
+    "                                      'status_count', 'followers_count', 'location', \n",
+    "                                      'source_device', 'retweet_text'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              tweet_id                               name      screen_name  \\\n",
-      "0  1459934703109218308  codax.investing〽️                  codax_investing   \n",
-      "1  1459934698927538181  Dhekacok 🐃,🐋 #SOL #TORG #TORGARMY  dikachok          \n",
-      "2  1459934690178220038  Mohammad borchlo                   borchlo           \n",
-      "3  1459934686801801218  fs                                 lmjsara           \n",
-      "4  1459934686743040001  Filip                              Filip_3233        \n",
+      "                                                text  \\\n",
+      "0  #NEO #btc #ETH \\nPullback to the broken resist...   \n",
+      "1  RT @LuckyCorgis: Hey, it's giveaway time!! We'...   \n",
+      "2  RT @ICOAnnouncement: 🎙 New Project\\n\\n🔷 SolarD...   \n",
+      "3  Feeling like it could finally be my turn to ha...   \n",
+      "4  RT @Blockchainsanta: I mean, it is kinda true ...   \n",
       "\n",
-      "   retweet_count  \\\n",
-      "0  0               \n",
-      "1  675             \n",
-      "2  4586            \n",
-      "3  0               \n",
-      "4  694             \n",
+      "                  created_at coin_type  \\\n",
+      "0  2021-11-14 17:22:12+00:00       BTC   \n",
+      "1  2021-11-14 17:22:11+00:00       BTC   \n",
+      "2  2021-11-14 17:22:09+00:00       BTC   \n",
+      "3  2021-11-14 17:22:08+00:00       BTC   \n",
+      "4  2021-11-14 17:22:08+00:00       BTC   \n",
       "\n",
-      "                                                                                                                                                                                                                                                                                          text  \\\n",
-      "0  #NEO #btc #ETH \\nPullback to the broken resistance https://t.co/DiQ3eJIRg6                                                                                                                                                                                                                    \n",
-      "1  RT @LuckyCorgis: Hey, it's giveaway time!! We're giving away 0.5 Solana and 1 Lucky Corgi NFT to one LUCKY winner!\\n\\nHow to enter:\\nLike 😎\\nRe…                                                                                                                                              \n",
-      "2  RT @ICOAnnouncement: 🎙 New Project\\n\\n🔷 SolarDex (SOLAR)\\n\\n🔶 Solar Dex aims to build a decentralized exchange based on the Solana blockchain.…                                                                                                                                               \n",
-      "3  Feeling like it could finally be my turn to have gotten in early to a meme coin. How can $HEY not pump it's a native crypto meme vs doggy coins.\\nBuy $HEY!!!\\n0xb1Ec55536B2c0Ba575C4Bc8fF96046eeC3027d31\\n$gm $ens $fren #ETH #BTC #NFT $floki #memecoin\\n#dogelon $shib #Metaverse\\n$mana   \n",
-      "4  RT @Blockchainsanta: I mean, it is kinda true 🤷‍♂️\\n\\n$BTC #BTC https://t.co/cF2VYjZDmH                                                                                                                                                                                                       \n",
-      "\n",
-      "                     mined_at                 created_at  favourite_count  \\\n",
-      "0  2021-11-14 20:36:34.826380  2021-11-14 17:22:12+00:00  1                 \n",
-      "1  2021-11-14 20:36:34.832444  2021-11-14 17:22:11+00:00  0                 \n",
-      "2  2021-11-14 20:36:34.837467  2021-11-14 17:22:09+00:00  0                 \n",
-      "3  2021-11-14 20:36:34.842364  2021-11-14 17:22:08+00:00  1                 \n",
-      "4  2021-11-14 20:36:34.847349  2021-11-14 17:22:08+00:00  0                 \n",
-      "\n",
-      "                                                                                                                                                                                                                                                          hashtags  \\\n",
-      "0  [{'text': 'NEO', 'indices': [0, 4]}, {'text': 'btc', 'indices': [5, 9]}, {'text': 'ETH', 'indices': [10, 14]}]                                                                                                                                                    \n",
-      "1  []                                                                                                                                                                                                                                                                \n",
-      "2  []                                                                                                                                                                                                                                                                \n",
-      "3  [{'text': 'ETH', 'indices': [215, 219]}, {'text': 'BTC', 'indices': [220, 224]}, {'text': 'NFT', 'indices': [225, 229]}, {'text': 'memecoin', 'indices': [237, 246]}, {'text': 'dogelon', 'indices': [247, 255]}, {'text': 'Metaverse', 'indices': [262, 272]}]   \n",
-      "4  [{'text': 'BTC', 'indices': [57, 61]}]                                                                                                                                                                                                                            \n",
-      "\n",
-      "   status_count  followers_count                  location  \\\n",
-      "0  124           50               Islamic Republic of Iran   \n",
-      "1  32466         477              NaN                        \n",
-      "2  403           22               NaN                        \n",
-      "3  12370         306              Rio de Janeiro             \n",
-      "4  399           46               NaN                        \n",
-      "\n",
-      "         source_device  \\\n",
-      "0  Twitter Web App       \n",
-      "1  Twitter for Android   \n",
-      "2  Twitter Web App       \n",
-      "3  Twitter Web App       \n",
-      "4  Twitter for Android   \n",
-      "\n",
-      "                                                                                                                                                                                                                                                                                                            retweet_text  \\\n",
-      "0  None                                                                                                                                                                                                                                                                                                                    \n",
-      "1  Hey, it's giveaway time!! We're giving away 0.5 Solana and 1 Lucky Corgi NFT to one LUCKY winner!\\n\\nHow to enter:\\nLike 😎\\nRetweet ☺️\\nFollow 🥳\\nTag 3 people 😍\\n\\nDrawn in 12 hours!\\n\\n#SOL #BTC #ETH #NFT #NFTGiveaway #Solana #SolanaAirdrop #SolanaSummer #Solanaszn #SolanaNFT #Crypto https://t.co/IR4cfBPdfs   \n",
-      "2  🎙 New Project\\n\\n🔷 SolarDex (SOLAR)\\n\\n🔶 Solar Dex aims to build a decentralized exchange based on the Solana blockchain.\\n\\n🔶 Details: https://t.co/Z2cruhaSTA\\n\\n#Cryptocurrency #SOLARDex #ICOAnnouncement #Bitcoin #Binance #BNB #BTC #BSC #Crypto #ETH #SOL https://t.co/cJVqlYMMgX                                \n",
-      "3  None                                                                                                                                                                                                                                                                                                                    \n",
-      "4  I mean, it is kinda true 🤷‍♂️\\n\\n$BTC #BTC https://t.co/cF2VYjZDmH                                                                                                                                                                                                                                                      \n",
-      "\n",
-      "  coin_type  \\\n",
-      "0  BTC        \n",
-      "1  BTC        \n",
-      "2  BTC        \n",
-      "3  BTC        \n",
-      "4  BTC        \n",
-      "\n",
-      "                                                                                                                                                                                                                  text_clean  \\\n",
-      "0  neo btc eth pullback broken resistance http co diq3ejirg6                                                                                                                                                                   \n",
-      "1  rt luckycorgis hey giveaway time we giving away 0 5 solana 1 lucky corgi nft one lucky winner how enter like re                                                                                                             \n",
-      "2  rt icoannouncement new project solardex solar solar dex aim build decentralized exchange based solana blockchain                                                                                                            \n",
-      "3  feeling like could finally turn gotten early meme coin how hey pump native crypto meme v doggy coin buy hey 0xb1ec55536b2c0ba575c4bc8ff96046eec3027d31 gm en fren eth btc nft floki memecoin dogelon shib metaverse mana    \n",
-      "4  rt blockchainsanta i mean kinda true btc btc http co cf2vyjzdmh                                                                                                                                                             \n",
-      "\n",
-      "   sentiment  \n",
-      "0 -0.400000   \n",
-      "1  0.333333   \n",
-      "2  0.136364   \n",
-      "3  0.050000   \n",
-      "4  0.018750   \n"
+      "                                          text_clean  sentiment  \n",
+      "0  neo btc eth pullback broken resistance http co...  -0.400000  \n",
+      "1  rt luckycorgis hey giveaway time we giving awa...   0.333333  \n",
+      "2  rt icoannouncement new project solardex solar ...   0.136364  \n",
+      "3  feeling like could finally turn gotten early m...   0.050000  \n",
+      "4  rt blockchainsanta i mean kinda true btc btc h...   0.018750  \n"
      ]
     }
    ],
@@ -263,14 +219,121 @@
     "    processed.df[index]['sentiment'] = processed.df[index]['text_clean'].apply(processed.getSentiment)\n",
     "\n",
     "# Print head of dataframe\n",
-    "print(processed.df[0].head())\n"
+    "print(processed.df[0].head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  coin_type                                         text_clean  sentiment  \\\n",
+      "0       BTC  neo btc eth pullback broken resistance http co...  -0.400000   \n",
+      "1       BTC  rt luckycorgis hey giveaway time we giving awa...   0.333333   \n",
+      "2       BTC  rt icoannouncement new project solardex solar ...   0.136364   \n",
+      "3       BTC  feeling like could finally turn gotten early m...   0.050000   \n",
+      "4       BTC  rt blockchainsanta i mean kinda true btc btc h...   0.018750   \n",
+      "\n",
+      "         date      time  \n",
+      "0  2021-11-14  17:22:12  \n",
+      "1  2021-11-14  17:22:11  \n",
+      "2  2021-11-14  17:22:09  \n",
+      "3  2021-11-14  17:22:08  \n",
+      "4  2021-11-14  17:22:08  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# update time format to only take the date\n",
+    "for index in range(len(processed.df)):\n",
+    "    processed.df[index]['date'] = processed.df[index]['created_at'].apply(lambda x: x[:10])\n",
+    "    processed.df[index]['time'] = processed.df[index]['created_at'].apply(lambda x: x[11:19])\n",
+    "    processed.df[index].drop(columns=['created_at'], inplace=True)\n",
+    "    processed.df[index].drop(columns=['text'], inplace=True)\n",
+    "    \n",
+    "print(processed.df[0].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start working with Bitcoin Market price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date     close coin_type   time\n",
+      "0  2022-01-04  46296.06       BTC  00:00\n",
+      "1  2022-01-03  46446.10       BTC  23:00\n",
+      "2  2022-01-03  46217.90       BTC  22:00\n",
+      "3  2022-01-03  45979.01       BTC  21:00\n",
+      "4  2022-01-03  45922.00       BTC  20:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def convert_date(x):\n",
+    "    try:\n",
+    "        return datetime.strptime(x, '%Y-%m-%d').date()\n",
+    "    except:\n",
+    "        return None\n",
+    "    # return datetime.strptime(x, '%Y-%m-%d')\n",
+    "\n",
+    "ret = []\n",
+    "for curr in currency:\n",
+    "    for file in glob.glob(f\"{processed.path}/2022_dataset/{curr}*-Market_Price-*.csv\"):\n",
+    "        ret = pd.concat([pd.read_csv(file)], ignore_index=True)\n",
+    "        ret['coin_type'] = curr\n",
+    "\n",
+    "# Process data to only include the date and time\n",
+    "ret['time'] = ret['date'].apply(lambda x: x[11:19])\n",
+    "ret['date'] = ret['date'].apply(lambda x: x[:10])\n",
+    "\n",
+    "# Change the format of date in ret from dd/mm/yyyy to yyyy-mm-dd\n",
+    "ret['date'] = ret['date'].apply(lambda x: datetime.strptime(x, \"%d/%m/%Y\").strftime(\"%Y-%m-%d\"))\n",
+    "\n",
+    "print(ret.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Change the order of columns \n",
+    "market_coin = ret[['coin_type', 'date', 'time', 'close']]\n",
+    "# Change name of column 'close' to 'price'\n",
+    "market_coin.rename(columns={'close': 'price'}, inplace=True)\n",
+    "\n",
+    "for index in range(len(processed.df)):\n",
+    "    processed.df[index] = processed.df[index][['coin_type', 'text_clean', 'date', 'time', 'sentiment']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Truncating dataframe by hour and then grouping them by hour"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
