Updates to scraping tweets

--- a/scrape_twitter.ipynb
+++ b/scrape_twitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,19 @@
     "        page_num = 1\n",
     "\n",
     "        ret = get_df()\n",
-    "        crypto_query = f\"#{query}\"\n",
+    "        crypto_query = f\"#{query} since:2022-01-24 until:2022-01-26\"\n",
     "        print(\"========\", query, crypto_query)\n",
+    "\n",
+    "        # Set start_date to 2022-01-24 and end_date to 2022-01-26\n",
+    "        # start_date = datetime.datetime(2022, 1, 24, 0, 0, 0)\n",
+    "        # end_date = datetime.datetime(2022, 1, 26, 0, 0, 0)\n",
     "\n",
     "        for page in tw.Cursor(\n",
     "            self.api.search_tweets, \n",
     "            q=crypto_query, \n",
     "            lang=\"en\", \n",
+    "            # since=start_date, \n",
+    "            # until=end_date,\n",
     "            tweet_mode=\"extended\", \n",
     "            count=200\n",
     "        ).pages():\n",
@@ -120,30 +126,33 @@
     "                last_tweet_id = tweet.id\n",
     "                ret = ret.append(data, ignore_index=True)\n",
     "\n",
+    "            count = 0\n",
     "            #print(\"Page:\", page_num)\n",
     "            if page_num % 180 == 0:\n",
     "                date_label = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
     "                print(\"Saving to file:\", date_label)\n",
-    "                ret.to_csv(f\"{date_label}-{query}.csv\", index=False)\n",
+    "                ret.to_csv(f\"{date_label}-{query}-{count}.csv\", index=False)\n",
+    "                count += 1\n",
     "                print(\"Resetting df\")\n",
     "                ret = get_df()\n",
     "        date_label = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "        ret.to_csv(f\"{self.Path}\\{date_label}-{query}.csv\", index=False)"
+    "        ret.to_csv(f\"{self.Path}\\{date_label}-{query}-{page_num}.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "miner = TweetMiner()\n",
     "\n",
     "handle_list = [\n",
+    "    \"DOGE\",\n",
     "    #\"BTC\",\n",
     "    #\"ETH\",\n",
     "    #\"USDT\",\n",
-    "    \"XRP\",\n",
+    "    #\"XRP\",\n",
     "    #\"BCH\",\n",
     "    #\"ADA\",\n",
     "    #\"BSV\",\n",
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start polling 1640074843.7755203\n",
-      "publishing update  ---  XRP\n",
-      "======== XRP #XRP\n",
+      "Start polling 1643799935.360907\n",
+      "publishing update  ---  DOGE\n",
+      "======== DOGE #DOGE since:2022-01-24 until:2022-01-26\n",
       "........... new page 1\n",
       "........... new page 2\n",
       "........... new page 3\n",
@@ -250,26 +259,7 @@
       "........... new page 30\n",
       "........... new page 31\n",
       "........... new page 32\n",
-      "........... new page 33\n"
-     ]
-    }
-   ],
-   "source": [
-    "publisher_thread.start()\n",
-    "listener_thread.start()\n",
-    "# start publishing\n",
-    "should_publish.set()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "........... new page 33\n",
       "........... new page 34\n",
       "........... new page 35\n",
       "........... new page 36\n",
@@ -416,7 +406,7 @@
       "........... new page 177\n",
       "........... new page 178\n",
       "........... new page 179\n",
-      "Saving to file: 2021-12-21\n",
+      "Saving to file: 2022-02-02\n",
       "Resetting df\n",
       "........... new page 180\n"
      ]
@@ -425,7 +415,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rate limit reached. Sleeping for: 581\n"
+      "Rate limit reached. Sleeping for: 610\n"
+     ]
+    }
+   ],
+   "source": [
+    "publisher_thread.start()\n",
+    "listener_thread.start()\n",
+    "# start publishing\n",
+    "should_publish.set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "awaiting for publishing update........... new page 181\n",
+      "........... new page 182\n",
+      "........... new page 183\n",
+      "........... new page 184\n",
+      "........... new page 185\n",
+      "........... new page 186\n",
+      "........... new page 187\n",
+      "........... new page 188\n",
+      "........... new page 189\n",
+      "........... new page 190\n",
+      "........... new page 191\n",
+      "........... new page 192\n",
+      "........... new page 193\n",
+      "........... new page 194\n",
+      "........... new page 195\n",
+      "........... new page 196\n",
+      "........... new page 197\n",
+      "........... new page 198\n",
+      "........... new page 199\n",
+      "........... new page 200\n",
+      "........... new page 201\n",
+      "........... new page 202\n",
+      "........... new page 203\n",
+      "........... new page 204\n",
+      "........... new page 205\n",
+      "........... new page 206\n",
+      "........... new page 207\n",
+      "........... new page 208\n",
+      "........... new page 209\n",
+      "........... new page 210\n",
+      "........... new page 211\n",
+      "........... new page 212\n",
+      "........... new page 213\n",
+      "........... new page 214\n",
+      "........... new page 215\n",
+      "........... new page 216\n",
+      "........... new page 217\n",
+      "........... new page 218\n",
+      "........... new page 219\n",
+      "........... new page 220\n",
+      "........... new page 221\n",
+      "........... new page 222\n",
+      "........... new page 223\n",
+      "........... new page 224\n",
+      "........... new page 225\n",
+      "........... new page 226\n",
+      "........... new page 227\n",
+      "........... new page 228\n",
+      "........... new page 229\n",
+      "........... new page 230\n",
+      "........... new page 231\n",
+      "........... new page 232\n",
+      "........... new page 233\n",
+      "........... new page 234\n",
+      "........... new page 235\n",
+      "........... new page 236\n",
+      "........... new page 237\n",
+      "........... new page 238\n",
+      "........... new page 239\n",
+      "........... new page 240\n",
+      "........... new page 241\n",
+      "........... new page 242\n",
+      "........... new page 243\n",
+      "........... new page 244\n",
+      "Failed to upload to ftp: 'TweetMiner' object has no attribute 'Path'\n"
      ]
     }
    ],
