--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -6,7 +6,7 @@
       "name": "LSTM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOQj6vbmt189SWef5LcXYdb",
+      "authorship_tag": "ABX9TyMM5uOTsKHhrHAIYv0kPZRa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,12 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 94,
       "metadata": {
         "id": "UslhA15GyD8b"
       },
       "outputs": [],
       "source": [
+        "### Credit to Aaron-Paul\n",
+        "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "import pandas as pd\n",
