Updates on config file and API keys for cryptocompare

--- a/2_crypto_market-price_extraction.ipynb
+++ b/2_crypto_market-price_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,16 @@
     "import time\n",
     "import os\n",
     "from pathlib import Path\n",
+    "import config\n",
     "\n",
     "import requests\n",
-    "# import time\n",
-    "# import datetime\n",
-    "# import typing\n",
-    "# import os\n",
     "from typing import Union, Optional, List, Dict\n",
     "Timestamp = Union[datetime.datetime, datetime.date, int, float]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,13 +33,16 @@
        "'&api_key=2505dbe622f0828b75b9fce3b24781f35bd23b25e6cf0ca4b118d76a9bb9e6aa'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cryptocompare.cryptocompare._set_api_key_parameter(\"2505dbe622f0828b75b9fce3b24781f35bd23b25e6cf0ca4b118d76a9bb9e6aa\")"
+    "# Set the API key\n",
+    "key = config.cryptocompare_key\n",
+    "\n",
+    "cryptocompare.cryptocompare._set_api_key_parameter(key)"
    ]
   },
   {
