--- a/3_process_sentiment.ipynb
+++ b/3_process_sentiment.ipynb
@@ -2,38 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
     "import datetime as dt\n",
-    "import nltk\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "# Google Colab settings \n",
+    "# nltk.download('stopwords')\n",
+    "# nltk.download('wordnet')\n",
+    "# !pip install vaderSentiment\n",
+    "# nltk.download('vader_lexicon')\n",
+    "\n",
     "from pathlib import Path\n",
     "from nltk.corpus import stopwords\n",
+    "from matplotlib import pyplot as plt\n",
     "from nltk.stem import SnowballStemmer, WordNetLemmatizer\n",
     "from nltk.tokenize import RegexpTokenizer\n",
-    "# from pyspark.sql.functions import col, udf, unix_timestamp\n",
     "from datetime import datetime\n",
-    "from textblob import TextBlob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.sentiment import SentimentAnalyzer\n",
+    "from textblob import TextBlob\n",
+    "\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
-    "import unicodedata\n",
     "sentiment_i_a = SentimentIntensityAnalyzer()\n",
-    "from nltk.corpus import subjectivity\n",
-    "from nltk.sentiment.util import *"
+    "from nltk.sentiment.util import *\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -45,17 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "from tqdm import tnrange, tqdm_notebook, tqdm\n",
-    "from matplotlib import pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
@@ -63,17 +48,6 @@
     "currency = [\n",
     "    \"DOGE\"\n",
     "    # \"BTC\",\n",
-    "    #\"ETH\",\n",
-    "    #\"USDT\",\n",
-    "    # \"XRP\",\n",
-    "    #\"BCH\",\n",
-    "    #\"ADA\",\n",
-    "    #\"BSV\",\n",
-    "    #\"LTC\",\n",
-    "    #\"LINK\",\n",
-    "    #\"BNB\",\n",
-    "    #\"EOS\",\n",
-    "    #\"TRON\",\n",
     "]"
    ]
   },
@@ -89,7 +63,10 @@
     "        \"\"\" \n",
     "        Initialize the class.\n",
     "        \"\"\"\n",
-    "        self.path = Path(f'{os.getcwd()}')\n",
+    "        # Google Colab settings\n",
+    "        # self.path = \"/content/drive/MyDrive/COMP30030_Dissertation_paul.codrea/Market-prediction\"\n",
+    "\n",
+    "        self.path = Path(f'{os.getcwd()}/market-prediction')\n",
     "        self.tokenizer = tokenizer\n",
     "        self.stop_words = stop_words\n",
     "        self.stemmer = stemmer\n",
@@ -99,22 +76,21 @@
     "        self.vocabulary = []\n",
     "        self.final = []\n",
     "\n",
+    "\n",
     "    # Read tweets from CSV for every currency\n",
     "    def read_tweets(self, curr):\n",
     "        \"\"\"\n",
     "        Read the tweets from the CSV file.\n",
     "        \"\"\"\n",
-    "        #initialize the dataframe\n",
     "        aux = []\n",
     "        ret = pd.DataFrame()\n",
-    "        for file in glob.glob(f\"{self.path}/twitter_data/*/*-{curr}*.csv\"):\n",
-    "            # print(f\"Reading {file}\")\n",
+    "        for file in glob.glob(f\"{self.path}/*-{curr}-*.csv\"):\n",
+    "            print(f\"Reading {file}\")\n",
     "            ret = pd.concat([pd.read_csv(file)], ignore_index=True)\n",
     "            ret['coin_type'] = curr\n",
     "            aux.append(ret)\n",
     "\n",
     "        self.df = pd.concat(aux, ignore_index=True)\n",
-    "        # Print the number of rows\n",
     "        print(f\"Number of rows: {len(self.df)}\")\n",
     "\n",
     "\n",
@@ -158,6 +134,7 @@
     "        # Return the lemma text\n",
     "        return \" \".join(tokens), count\n",
     "\n",
+    "\n",
     "    def process_ccy(self):\n",
     "        \"\"\"\n",
     "        Processes the currency data.\n",
@@ -178,6 +155,7 @@
     "        print(f\"There are {count} words in the text\")\n",
     "        print(f\"Number of unique words: {len(self.vocabulary)}\")\n",
     "    \n",
+    "\n",
     "    def drop_last(self):\n",
     "        \"\"\"\n",
     "        Drop text and created_at columns.\n",
@@ -190,8 +168,8 @@
     "        Get the sentiment of the tweet.\n",
     "        \"\"\"\n",
     "        analysis = TextBlob(tweet)\n",
-    "\n",
     "        return analysis.sentiment.polarity\n",
+    "\n",
     "\n",
     "    def set_sentiment_VADER(self):\n",
     "        \"\"\"\n",
@@ -232,7 +210,7 @@
     "        \"\"\"\n",
     "        score = []\n",
     "        for i, tweet in tqdm(self.df.iterrows(), total=self.df.shape[0]):\n",
-    "            score.append(tweet['sentiment_VADER'] * (tweet['followers_count'])) #* (tweet['retweet_count']+1))\n",
+    "            score.append(tweet['sentiment_VADER'] * 0.5 + tweet['retweet_count'] * 0.1 + tweet['followers_count'] * 0.1)\n",
     "\n",
     "        self.df['score'] = score"
    ]
@@ -313,11 +291,6 @@
     "    processed.df['sentiment'] = processed.df['text_clean'].apply(processed.getSentiment)\n",
     "\n",
     "processed.set_score()\n",
-    "\n",
-    "\n",
-    "###### THIS IS A DRAFT ######\n",
-    "# Rearange the columns 'coin_type', 'round_time', 'text_clean', 'sentiment'\n",
-    "# processed.df = processed.df[['coin_type', 'round_time', 'text_clean','retweet_count', 'followers_count', 'sentiment_VADER', 'positive', 'negative', 'neutral', 'sentiment', 'score']]\n",
     "processed.df = processed.df[['round_time', 'sentiment_VADER', 'positive', 'negative', 'neutral', 'sentiment', 'score']]\n",
     "\n",
     "# Rename the column round_time to date\n",
@@ -421,44 +394,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create hourly_sentiment_df to store the sentiment data for each hour\n",
-    "hourly_score_df = pd.DataFrame(columns=['date', 'score'])\n",
     "\n",
-    "# for loop to get the mean of score for each hour\n",
-    "for hour in processed.df['date'].unique():\n",
-    "    score = processed.df[processed.df['date'] == hour]['score']\n",
-    "    mean_score= score.mean()\n",
+    "# hourly_score_df = pd.DataFrame(columns=['date', 'score'])\n",
     "\n",
-    "    # Create a dataframe with the mean sentiment for each hour\n",
-    "    hourly_score_df = hourly_score_df.append({'date': hour, 'score': mean_score}, ignore_index=True)"
+    "# # for loop to get the mean of score for each hour\n",
+    "# for hour in processed.df['date'].unique():\n",
+    "#     score = processed.df[processed.df['date'] == hour]['score']\n",
+    "#     mean_score= score.mean()\n",
+    "\n",
+    "#     # Create a dataframe with the mean sentiment for each hour\n",
+    "#     hourly_score_df = hourly_score_df.append({'date': hour, 'score': mean_score}, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "date     2022-01-13 17:00\n",
-      "score          232.456765\n",
-      "Name: 0, dtype: object\n",
-      "date     2022-01-14 22:00\n",
-      "score         1254.336807\n",
-      "Name: 29, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Print first and last element in hourly_sentiment_df\n",
-    "print(hourly_score_df.iloc[0])\n",
-    "print(hourly_score_df.iloc[-1])"
+    "# print(hourly_score_df.iloc[0])\n",
+    "# print(hourly_score_df.iloc[-1])"
    ]
   },
   {
@@ -474,83 +435,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doge_price_data = pd.read_csv(f\"{processed.path}/DOGE_price.csv\")\n",
+    "doge_price_data = pd.read_csv(f\"{processed.path}/coin_price.csv\")\n",
     "doge_price_data.rename(columns={'time': 'date'}, inplace=True)\n",
     "doge_price_data.date = doge_price_data.date.apply(lambda x: datetime.strptime(x, '%Y-%m-%d %H:%M:%S').strftime('%Y-%m-%d %H:%M'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                date  positive  negative   neutral        score   close  \\\n",
-      "0   2022-01-13 17:00  0.099517  0.037228  0.863284   232.456765  0.1629   \n",
-      "1   2022-01-13 18:00  0.088475  0.033548  0.877998   295.018028  0.1627   \n",
-      "2   2022-01-13 19:00  0.094921  0.032796  0.872287   216.354902  0.1630   \n",
-      "3   2022-01-13 20:00  0.091648  0.026843  0.881507   378.167873  0.1660   \n",
-      "4   2022-01-13 21:00  0.099684  0.024527  0.875786   217.496336  0.1707   \n",
-      "5   2022-01-13 22:00  0.084185  0.031894  0.883919   191.059769  0.1671   \n",
-      "6   2022-01-13 23:00  0.116418  0.026720  0.856872   217.261591  0.1717   \n",
-      "7   2022-01-14 00:00  0.099455  0.025557  0.874990   113.171744  0.1781   \n",
-      "8   2022-01-14 01:00  0.090157  0.028529  0.881309   163.900420  0.1764   \n",
-      "9   2022-01-14 02:00  0.090497  0.026574  0.882924   258.128379  0.1775   \n",
-      "10  2022-01-14 03:00  0.088859  0.026163  0.884984   218.279833  0.1759   \n",
-      "11  2022-01-14 04:00  0.095631  0.030806  0.873566   196.182004  0.1897   \n",
-      "12  2022-01-14 05:00  0.101673  0.018868  0.879457   214.778765  0.1900   \n",
-      "13  2022-01-14 06:00  0.101014  0.019206  0.879778   293.371628  0.1997   \n",
-      "14  2022-01-14 07:00  0.106932  0.019299  0.873766   323.069149  0.1960   \n",
-      "15  2022-01-14 08:00  0.117811  0.018990  0.863197   435.948785  0.1932   \n",
-      "16  2022-01-14 09:00  0.129195  0.019589  0.851215   569.174421  0.1962   \n",
-      "17  2022-01-14 10:00  0.137610  0.025756  0.836630   529.513778  0.1924   \n",
-      "18  2022-01-14 11:00  0.124811  0.020978  0.854224   464.269367  0.1885   \n",
-      "19  2022-01-14 12:00  0.121918  0.015555  0.862541   431.584994  0.1890   \n",
-      "20  2022-01-14 13:00  0.122888  0.019138  0.857968   314.735423  0.1906   \n",
-      "21  2022-01-14 14:00  0.118566  0.011100  0.870333   386.940477  0.1945   \n",
-      "22  2022-01-14 15:00  0.109358  0.010641  0.880003   570.503315  0.1942   \n",
-      "23  2022-01-14 16:00  0.107671  0.011361  0.880964   326.026484  0.1922   \n",
-      "24  2022-01-14 17:00  0.107718  0.010774  0.881509   383.489316  0.1869   \n",
-      "25  2022-01-14 18:00  0.106115  0.013040  0.880841   370.646436  0.1889   \n",
-      "26  2022-01-14 19:00  0.119936  0.014278  0.865782   441.335164  0.1876   \n",
-      "27  2022-01-14 20:00  0.145740  0.015428  0.838831   497.820105  0.1889   \n",
-      "28  2022-01-14 21:00  0.138784  0.015416  0.845800  -269.892687  0.1898   \n",
-      "29  2022-01-14 22:00  0.143182  0.010346  0.846471  1254.336807  0.1879   \n",
-      "\n",
-      "   coin_type  \n",
-      "0       DOGE  \n",
-      "1       DOGE  \n",
-      "2       DOGE  \n",
-      "3       DOGE  \n",
-      "4       DOGE  \n",
-      "5       DOGE  \n",
-      "6       DOGE  \n",
-      "7       DOGE  \n",
-      "8       DOGE  \n",
-      "9       DOGE  \n",
-      "10      DOGE  \n",
-      "11      DOGE  \n",
-      "12      DOGE  \n",
-      "13      DOGE  \n",
-      "14      DOGE  \n",
-      "15      DOGE  \n",
-      "16      DOGE  \n",
-      "17      DOGE  \n",
-      "18      DOGE  \n",
-      "19      DOGE  \n",
-      "20      DOGE  \n",
-      "21      DOGE  \n",
-      "22      DOGE  \n",
-      "23      DOGE  \n",
-      "24      DOGE  \n",
-      "25      DOGE  \n",
-      "26      DOGE  \n",
-      "27      DOGE  \n",
-      "28      DOGE  \n",
-      "29      DOGE  \n"
+     "ename": "NameError",
+     "evalue": "name 'hour_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26372/990377786.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m###### THIS IS A DRAFT ######\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmerged_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhour_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdoge_price_data\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'inner'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;31m# # Drop the 'Unamed: 0' column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmerged_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Unnamed: 0'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hour_df' is not defined"
      ]
     }
    ],
@@ -565,7 +468,7 @@
     "# Sort the dataframe by date ascending\n",
     "merged_df.sort_values(by=['date'], ascending=True, inplace=True)\n",
     "\n",
-    "print(merged_df)"
+    "# print(merged_df)"
    ]
   },
   {
