Update code for final format

--- a/1_scrape_historic-tweets.ipynb
+++ b/1_scrape_historic-tweets.ipynb
@@ -10,7 +10,6 @@
     "import datetime\n",
     "import os\n",
     "import pandas as pd\n",
-    "import requests\n",
     "import tweepy as tw\n",
     "import threading\n",
     "import time\n",
@@ -24,22 +23,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set up the Twitter API. Specify the colummns we want to scrape.\n",
     "def get_df():\n",
+    "    \"\"\" \n",
+    "    Returns a dataframe with the columns we want to scrape.\n",
+    "    \"\"\"\n",
     "    return pd.DataFrame(\n",
     "        columns=[\n",
     "            \"tweet_id\",\n",
-    "            \"name\",\n",
-    "            \"screen_name\",\n",
     "            \"retweet_count\",\n",
     "            \"text\",\n",
     "            \"mined_at\",\n",
     "            \"created_at\",\n",
-    "            \"favourite_count\",\n",
     "            \"hashtags\",\n",
-    "            \"status_count\",\n",
     "            \"followers_count\",\n",
-    "            \"location\",\n",
-    "            \"source_device\",\n",
     "        ]\n",
     "    )"
    ]
@@ -56,6 +53,7 @@
     "    ret = []\n",
     "    api = False\n",
     "\n",
+    "    # Use twitter_keys from config file\n",
     "    twitter_keys = {\n",
     "        \"consumer_key\": config.consumer_key,\n",
     "        \"consumer_secret\": config.consumer_secret,\n",
@@ -81,8 +79,11 @@
     "        last_tweet_id = False\n",
     "        page_num = 1\n",
     "\n",
+    "        # Save in 'ret' the columns we are interested in scraping.\n",
     "        ret = get_df()\n",
-    "        crypto_query = f\"#{query}\" # since:2022-01-24 until:2022-01-26\"\n",
+    "\n",
+    "        # Alter 'crypto_query' if you want to mine from specific dates\n",
+    "        crypto_query = f\"#{query}\" #since:2022-03-03 until:2022-03-05\"\n",
     "        print(\"========\", query, crypto_query)\n",
     "\n",
     "        document_count = 0\n",
@@ -99,18 +100,12 @@
     "            for tweet in page:\n",
     "                data = {\n",
     "                    \"tweet_id\": tweet.id,\n",
-    "                    \"name\": tweet.user.name,\n",
-    "                    \"screen_name\": tweet.user.screen_name,\n",
     "                    \"retweet_count\": tweet.retweet_count,\n",
     "                    \"text\": tweet.full_text,\n",
     "                    \"mined_at\": datetime.datetime.now(),\n",
     "                    \"created_at\": tweet.created_at,\n",
-    "                    \"favourite_count\": tweet.favorite_count,\n",
     "                    \"hashtags\": tweet.entities.get(\"hashtags\"),\n",
-    "                    \"status_count\": tweet.user.statuses_count,\n",
     "                    \"followers_count\": tweet.user.followers_count,\n",
-    "                    \"location\": tweet.user.location,\n",
-    "                    \"source_device\": tweet.source,\n",
     "                }\n",
     "                try:\n",
     "                    data[\"retweet_text\"] = tweet.retweeted_status.full_text\n",
@@ -130,7 +125,7 @@
     "                print(\"Resetting df\")\n",
     "                ret = get_df()\n",
     "        date_label = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "        ret.to_csv(f\"{self.Path}\\{date_label}-{query}-{page_num}.csv\", index=False)"
+    "        ret.to_csv(f\"{self.Path}\\{date_label}-{query}-{document_count}.csv\", index=False)"
    ]
   },
   {
@@ -141,8 +136,9 @@
    "source": [
     "miner = TweetMiner()\n",
     "\n",
+    "# Choose one handler at a time.\n",
     "handle_list = [\n",
-    "    #\"DOGE\",\n",
+    "    # \"DOGE\",\n",
     "    \"BTC\",\n",
     "]"
    ]
@@ -208,7 +204,7 @@
     "publisher_thread.start()\n",
     "listener_thread.start()\n",
     "\n",
-    "# start publishing\n",
+    "# Start publishing\n",
     "should_publish.set()"
    ]
   },
