Update code for final format

--- a/2_crypto_market-price_extraction.ipynb
+++ b/2_crypto_market-price_extraction.ipynb
@@ -27,7 +27,6 @@
    "source": [
     "# Set the API key\n",
     "key = config.cryptocompare_key\n",
-    "\n",
     "cryptocompare.cryptocompare._set_api_key_parameter(key)"
    ]
   },
@@ -38,19 +37,26 @@
    "outputs": [],
    "source": [
     "# API\n",
-    "# _API_KEY_PARAMETER = \"\"\n",
     "_URL_PRICE = 'https://min-api.cryptocompare.com/data/pricemulti?fsyms={}&tsyms={}' \n",
     "_URL_PRICE_MULTI = 'https://min-api.cryptocompare.com/data/pricemulti?fsyms={}&tsyms={}'\n",
     "_URL_PRICE_MULTI_FULL = 'https://min-api.cryptocompare.com/data/pricemultifull?fsyms={}&tsyms={}'\n",
     "_URL_HIST_PRICE = 'https://min-api.cryptocompare.com/data/pricehistorical?fsym={}&tsyms={}&ts={}&e={}'\n",
     "_URL_HIST_PRICE_DAY = 'https://min-api.cryptocompare.com/data/histoday?fsym={}&tsym={}&limit={}&e={}&toTs={}'\n",
     "_URL_HIST_PRICE_HOUR = 'https://min-api.cryptocompare.com/data/histohour?fsym={}&tsym={}&limit={}&e={}&toTs={}'\n",
-    "_URL_EXCHANGES = 'https://www.cryptocompare.com/api/data/exchanges?'\n",
+    "# _URL_EXCHANGES = 'https://www.cryptocompare.com/api/data/exchanges?'\n",
     "_URL_EXCHANGES_HOUR = 'https://min-api.cryptocompare.com/data/exchange/histohour?tsym={}&limit={}'\n",
     "\n",
     "# DEFAULTS\n",
     "CURRENCY = 'USD'    # Default currency\n",
     "LIMIT = 1440    # Default limit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cryptocompare provides a Github for scraping Real-time Crypto prices. Source:\n",
+    "https://github.com/lagerfeuer/cryptocompare/blob/master/cryptocompare/cryptocompare.py"
    ]
   },
   {
@@ -208,6 +214,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scraping crypto prices for Price prediction "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -225,22 +238,28 @@
    "source": [
     "# Comvert df to dataframe and save to csv\n",
     "df = pd.DataFrame(df)\n",
-    "\n",
     "df = df[['time', 'close']]\n",
     "df['time'] = pd.to_datetime(df['time'], unit='s')\n",
     "\n",
     "\n",
     "df = df.sort_values(by=['time'], ascending=False)\n",
-    "df.to_csv(f\"{path}\\price_history.csv\")\n",
-    "\n",
-    "print(df.head())"
+    "# print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f\"{path}\\price_history-raw.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DOWN here is data filtering"
+    "### Data filtering"
    ]
   },
   {
@@ -250,75 +269,17 @@
    "outputs": [],
    "source": [
     "# Read csv file in new_df\n",
-    "new_df = pd.read_csv(f\"{path}\\price_history.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "new_df = df.copy()\n",
+    "\n",
     "# Remove Unnamed column\n",
     "new_df = new_df.drop(columns=['Unnamed: 0'])\n",
-    "print(new_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create new dataframe to hold only the time and volume column\n",
-    "df_volume = new_df[['time', 'close']]\n",
+    "print(new_df.head())\n",
     "\n",
-    "#Convert time column to datetime to GMT time zone\n",
-    "df_volume['time'] = pd.to_datetime(df_volume['time'], unit='s')\n",
-    "print(df_volume.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Filter data to only show data between 21 Feb 2022 and now\n",
-    "df_volume = new_df[(new_df['time'] >= '2022-02-20') & (new_df['time'] <= '2022-03-04')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print length of dataframe\n",
-    "print(len(df_volume))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the dataframe time and volume \n",
-    "from matplotlib import pyplot as plt\n",
+    "df_volume = new_df[(new_df['time'] >= '2022-02-20') & (new_df['time'] <= '2022-03-04')]\n",
     "\n",
-    "df_volume.plot(x='time', y='close', figsize=(16,8))\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Save updated prices from filtered_df to a csv file\n",
-    "df_volume.to_csv(f\"{path}\\price_history.csv\")"
+    "df_volume.to_csv(f\"{path}\\price_history-filtered.csv\")"
    ]
   }
  ],
